--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <!-- Your code here -->
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="This is a lion">
 
 </body>
 </html>
