--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- Your code here -->
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="This is a lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion in the jungle">
 
 </body>
 </html>
