--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <!-- Your code here -->
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="This is a lion">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion in the jungle" title="Lion in the jungle!">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion in the jungle"
+  title="Lion in the jungle!">
 
 </body>
 </html>
